incidents/static/custom_css/fir.css
/* ... */
#all_incidents tr.B td a {
	color: rgb(31, 105, 121)!important;
}

td.incident_date_column {
	width: 85px;
}

.nothing_to_show {
	margin-bottom: 15px;
}

/* New incident -------------------------------*/

.labels-ontop label {
	display: block;
}

.collapse.in {
	overflow: visible;
}

div#concerned_business_lines {
	min-width: 200px;
}

.aligned-with-stack {
	margin-top: 30px !important;
}

.header h1{
	margin-top: 0;
}

.help-inline
{
	clear:both;
}

legend.border-bottom {
	padding-bottom: 7px;
}

/* Adapt select2 to be compatible with bootstrap light themes -------------------------------------*/

.select2-search-choice {
	background-image: linear-gradient(to bottom, #DEE7F8, #DEE7F8) !important;
}

body .select2-container--bootstrap-5 .select2-selection {
    color: var(--bs-body-color);
    background-color: var(--bs-body-bg);
    border: var(--bs-border-width) solid var(--bs-border-color);
}

body
    .select2-container--bootstrap-5.select2-container--focus
    .select2-selection,
body
    .select2-container--bootstrap-5.select2-container--open
    .select2-selection {
    border-color: var(--bs-link-hover-color);
    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
body .select2-container--bootstrap-5 .select2-dropdown {
    color: var(--bs-body-color);
    background-color: var(--bs-body-bg);
    border-color: var(--bs-link-hover-color);
}
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-search
    .select2-search__field {
    color: var(--bs-body-color);
    background-color: var(--bs-body-bg);
    background-clip: padding-box;
    border: var(--bs-border-width) solid var(--bs-border-color);
}
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-search
    .select2-search__field:focus {
    border-color: var(--bs-link-hover-color);
    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-results__options
    .select2-results__option.select2-results__message {
    color: #6c757d;
}
[data-bs-theme=dark] body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-results__options
    .select2-results__option.select2-results__option--highlighted {
    color: var(--bs-body-color);
    background-color: var(--bs-light-bg-subtle) !important;
}
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-results__options
    .select2-results__option.select2-results__option--selected,
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-results__options
    .select2-results__option[aria-selected="true"]:not(
        .select2-results__option--highlighted
    ) {
    color: var(--bs-body-color);
    background-color: var(--bs-dark-bg-subtle);
}
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-results__options
    .select2-results__option.select2-results__option--disabled,
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-results__options
    .select2-results__option[aria-disabled="true"] {
    color: #6c757d;
}
body
    .select2-container--bootstrap-5
    .select2-dropdown
    .select2-results__options
    .select2-results__option[role="group"]
    .select2-results__group {
    color: #6c757d;
}
body
    .select2-container--bootstrap-5
    .select2-selection--single
    .select2-selection__rendered {
    color: var(--bs-body-color);
}
body
    .select2-container--bootstrap-5
    .select2-selection--single
    .select2-selection__rendered
    .select2-selection__placeholder {
    color: #6c757d;
}
body
    .select2-container--bootstrap-5
    .select2-selection--multiple
    .select2-selection__rendered
    .select2-selection__choice {
    color: var(--bs-body-color);
    border: var(--bs-border-width) solid var(--bs-border-color);
}

body
    .select2-container--bootstrap-5.select2-container--disabled
    .select2-selection,
body
    .select2-container--bootstrap-5.select2-container--disabled.select2-container--focus
    .select2-selection {
    color: #6c757d;
    background-color: var(--bs-light-bg-subtle);
    border-color: var(--bs-dark-bg-subtle);
}
.is-valid + body .select2-container--bootstrap-5 .select2-selection,
.was-validated
    select:valid
    + body
    .select2-container--bootstrap-5
    .select2-selection {
    border-color: #198754;
}
.is-valid
    + body
    .select2-container--bootstrap-5.select2-container--focus
    .select2-selection,
.is-valid
    + body
    .select2-container--bootstrap-5.select2-container--open
    .select2-selection,
.was-validated
    select:valid
    + body
    .select2-container--bootstrap-5.select2-container--focus
    .select2-selection,
.was-validated
    select:valid
    + body
    .select2-container--bootstrap-5.select2-container--open
    .select2-selection {
    border-color: #198754;
    box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
}
.is-invalid + body .select2-container--bootstrap-5 .select2-selection,
.was-validated
    select:invalid
    + body
    .select2-container--bootstrap-5
    .select2-selection {
    border-color: #dc3545;
}
.is-invalid
    + body
    .select2-container--bootstrap-5.select2-container--focus
    .select2-selection,
.is-invalid
    + body
    .select2-container--bootstrap-5.select2-container--open
    .select2-selection,
.was-validated
    select:invalid
    + body
    .select2-container--bootstrap-5.select2-container--focus
    .select2-selection,
.was-validated
    select:invalid
    + body
    .select2-container--bootstrap-5.select2-container--open
    .select2-selection {
    border-color: #dc3545;
    box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
}

/* Dashboard -------------------------------------*/

.tabs {
	padding-top: 20px;
}


/* Easy MDE / CodeMirror CSS */

.CodeMirror {
    height: 300px !important;
}

.editor-toolbar .table {
    width: auto;
}

.modal-body {
    max-height: calc(100vh - 210px);
    overflow-y: auto;
}
/* ... */

